array.island.Island.scala.error
Erreur de compilation :
Island:6: error: identifier expected but integer literal found.
    while (num[i]<num[i+1]) {
                        ^Island:13: error: ']' expected but '}' found.
  }
  ^