array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var i:Int=0;
  var niveaux:Int=0;
  while (i < num.length-1) {
    while (num[i]<num[i+1]) {
      i=i+1;
      niveaux=niveaux+1;
    }
    while (num[i]>=num[i+1]) {
      i=i+1
    }
  }
  return niveaux
}